--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "mlx.h": "c",
-        "utilities.h": "c"
+        "utilities.h": "c",
+        "image.h": "c",
+        "stddef.h": "c"
     }
 }
